# NLP

./: .gitignore  README.md
ATA-2022/: README.md
Lectures/: README.md
Students/: README.md
Tasks/Task 1/: README.md
lectures/: README.md
projects/: README.md
projects/AnnaBazarova/: README.md
projects/abazarova/: README.md
projects/abazarova/assets/: emoji-to-label.yml
projects/abazarova/source/: __main__.py
projects/anna-bazarova/: README.md
projects/anna-bazarova/assets/: environment.yml
projects/dima-chernykh/: README.md
projects/dima-chernykh/assets/: emoji-to-label.yml  environment.yml  requirements.txt
projects/e1izabeth/: README.md
projects/e1izabeth/assets/: .gitignore
projects/e1izabeth/source/: __main__.py
projects/emoji-labeller/: README.md
projects/foolchaos/: README.md
projects/foolchaos/assets/: requirements.txt
projects/foolchaos/source/: __main__.py  text_annotation.py  text_class.py  text_correction.py  text_topic.py  text_vector.py
projects/hello-world/: .main.py.swp
projects/iburakov/: README.md
projects/iburakov/assets/: .gitignore  requirements.txt
projects/iburakov/source/: dirs.py  misc.py  paths.py  playground_init.py
projects/msokolov/: .gitignore  README.md
projects/msokolov/source/hirschberg/: .gitignore  Cargo.toml
projects/msokolov/source/hirschberg/src/: lib.rs
projects/nrogalenko/: README.md
tasks/: README.md
tasks/task-01/: README.md
tasks/task-02/: README.md
tasks/task-03/: README.md
tasks/task-04/: README.md
tasks/task-05/: README.md
tasks/task-06/: README.md
(+24824 files in other folders)
