[package]
name = "hirschberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.16.1", features = ["extension-module"] }
smallvec = "1.8"
rayon = "1.5.1"

[dev-dependencies]
csv = "1.1.6"